--- a/public/custom/style.css
+++ b/public/custom/style.css
@@ -4,10 +4,10 @@
     --light: #ffffff;
     --dark: #1e1e1e;
     --color1: #202340;
-    --color2: #8d99ae;
+    --color2: #57647c;
     --color3: #edf2f4;
-    --color4: #a269ff;
-    --color5: #8423ff;
+    --color4: #7e4ad3;
+    --color5: #5713b1;
 }
 
 .img-logo {
